--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Audit.Model\AuditResult.cs" />
     <Compile Include="Audit.Model\AuditStatusEnum.cs" />
     <Compile Include="Audit.Model\BRAFMetastaticMelanomaAudit.cs" />
+    <Compile Include="Audit.Model\CanFinalizeCytologyPanelOrderAudit.cs" />
     <Compile Include="Audit.Model\CaseHasNotFoundClientAudit.cs" />
     <Compile Include="Audit.Model\CaseHasNotFoundProviderAudit.cs" />
     <Compile Include="Audit.Model\CaseHasUnfinaledPeerReviewAudit.cs" />
