--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -572,7 +572,7 @@
     <Compile Include="Gateway\FlowGatewayMongo.cs" />
     <Compile Include="Gateway\PhysicianClientGatewayMongo.cs" />
     <Compile Include="Interface\ISolidTumorTesting.cs" />
-    <Compile Include="MolecularTesting\BatchLogReport.cs" />
+    <Compile Include="MolecularTesting\CaseList.cs" />
     <Compile Include="Mongo\BSONObjectBuilder.cs" />
     <Compile Include="Mongo\AOTransferBuilder.cs">
       <SubType>Code</SubType>
