--- a/YellowstonePathology.OptimusPrime/YellowstonePathology.OptimusPrime.csproj
+++ b/YellowstonePathology.OptimusPrime/YellowstonePathology.OptimusPrime.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HPVInvalidResult.cs" />
+    <Compile Include="NGCTInvalidResult.cs" />
     <Compile Include="NGCTOneOrBothPositiveResult.cs" />
     <Compile Include="NGCTBothNegativeResult.cs" />
     <Compile Include="NGCTResult.cs" />
