Add Acid Wash Result dialog

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -636,6 +636,8 @@
     <Compile Include="Test\TechInitiatedPeripheralSmear\TechInitiatedPeripheralSmearTest.cs" />
     <Compile Include="Test\TechInitiatedPeripheralSmear\TechInitiatedPeripheralSmearTestOrder.cs" />
     <Compile Include="Test\TechInitiatedPeripheralSmear\TechInitiatedPeripheralSmearWordDocument.cs" />
+    <Compile Include="Test\ThinPrepPap\AcidWashSearchItem.cs" />
+    <Compile Include="Test\ThinPrepPap\AcidWashSearchList.cs" />
     <Compile Include="Test\Trichomonas\TrichomonasInvalidResult.cs" />
     <Compile Include="TrackedItemStatusEnum.cs" />
     <Compile Include="Specimen.Model\AliquotCollection.cs" />
