--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -637,6 +637,11 @@
     <Compile Include="Test\PantherOrderListItemNGCT.cs" />
     <Compile Include="Test\PantherOrderListItem.cs" />
     <Compile Include="Test\PDL1\PDL1Test.cs" />
+    <Compile Include="Test\RASRAFPanel\RASRAFPanelEpicObxView.cs" />
+    <Compile Include="Test\RASRAFPanel\RASRAFPanelResult.cs" />
+    <Compile Include="Test\RASRAFPanel\RASRAFPanelTest.cs" />
+    <Compile Include="Test\RASRAFPanel\RASRAFPanelTestOrder.cs" />
+    <Compile Include="Test\RASRAFPanel\RASRAFPanelWordDocument.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHInconclusiveResult.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHNegativeWithMonosomyResult.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHNegativeWithPolysomyResult.cs" />
