--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -634,6 +634,7 @@
     <Compile Include="Test\HPV\HPVPositiveResult.cs" />
     <Compile Include="Test\Instrument.cs" />
     <Compile Include="Test\PantherAliquotListItem.cs" />
+    <Compile Include="Test\PantherOrderListItemHPV1618.cs" />
     <Compile Include="Test\PantherOrderListItemNGCT.cs" />
     <Compile Include="Test\PantherOrderListItem.cs" />
     <Compile Include="Test\PDL1\PDL1Test.cs" />
