--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -620,6 +620,7 @@
       <DependentUpon>RASRAFPanelResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Test\RASRAFPanelResultPath.cs" />
+    <Compile Include="Test\ResultDisabler.cs" />
     <Compile Include="Test\ROS1ResultPath.cs" />
     <Compile Include="Test\ROS1ResultPage.xaml.cs">
       <DependentUpon>ROS1ResultPage.xaml</DependentUpon>
