--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -469,9 +469,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Persistence\JSONWriter.cs" />
+    <Compile Include="Persistence\JSONObjectWriter.cs" />
     <Compile Include="Test.Model\DispalyGroupProstate.cs" />
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHNegativeWithMonosomyResult.cs" />
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHNegativeWithPolysomyResult.cs" />
+    <Compile Include="Test\CD1a\CD1aTest.cs" />
     <Compile Include="Test\EGFRMutationAnalysis\EGFRMutationAnalysisPanel.cs" />
     <Compile Include="Test\ErPrSemiQuantitative\ERPRSemiQuanititativePanel.cs" />
     <Compile Include="Test\HER2AmplificationByISH\HER2AmplificationByISHPanel.cs" />
