--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -299,6 +299,7 @@
     </Compile>
     <Compile Include="Client\HPVCompoundStandingOrderRule3.cs" />
     <Compile Include="Client\FaxPhysicianClientDistribution.cs" />
+    <Compile Include="Client\HPVCompoundStandingOrderRule4.cs" />
     <Compile Include="Client\MediTechPhysicianClientDistribution.cs" />
     <Compile Include="Client\ECWPhysicianClientDistribution.cs" />
     <Compile Include="Client\EPICAndFaxPhysicianClientDistribution.cs" />
