Adding Object Comparer

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -475,6 +475,7 @@
     <Compile Include="Persistence\JSONIndenter.cs" />
     <Compile Include="Persistence\JSONWriter.cs" />
     <Compile Include="Persistence\JSONObjectWriter.cs" />
+    <Compile Include="Persistence\ObjectComparer.cs" />
     <Compile Include="Test.Model\DispalyGroupProstate.cs" />
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHNegativeWithMonosomyResult.cs" />
     <Compile Include="Test\ALKForNSCLCByFISH\ALKForNSCLCByFISHNegativeWithPolysomyResult.cs" />
