--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -416,6 +416,7 @@
     </Compile>
     <Compile Include="Gateway\AOGW.cs" />
     <Compile Include="Gateway\AOSaveResult.cs" />
+    <Compile Include="Gateway\JASONObjectBuilder.cs" />
     <Compile Include="Gateway\LockGateway.cs">
       <SubType>Code</SubType>
     </Compile>
